RESOLVED FIXED233784
A Safari tab can rarely get stuck in a state where rendering updates stop happening
https://bugs.webkit.org/show_bug.cgi?id=233784
Summary A Safari tab can rarely get stuck in a state where rendering updates stop hap...
Simon Fraser (smfr)
Reported 2021-12-02 15:06:36 PST
A Safari tab can rarely get stuck in a state where rendering updates stop happening
Attachments
Patch (9.19 KB, patch)
2021-12-02 15:13 PST, Simon Fraser (smfr)
ews-feeder: commit-queue-
Patch (9.19 KB, patch)
2021-12-02 15:20 PST, Simon Fraser (smfr)
cdumez: review+
ews-feeder: commit-queue-
Patch (10.96 KB, patch)
2021-12-02 15:52 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-12-02 15:13:09 PST
Simon Fraser (smfr)
Comment 2 2021-12-02 15:13:14 PST
Simon Fraser (smfr)
Comment 3 2021-12-02 15:20:04 PST
Chris Dumez
Comment 4 2021-12-02 15:23:29 PST
Comment on attachment 445780 [details] Patch r=me
Chris Dumez
Comment 5 2021-12-02 15:37:03 PST
Comment on attachment 445780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=445780&action=review > Source/WebCore/platform/graphics/DisplayRefreshMonitor.h:75 > Lock& lock() { return m_lock; } Probably want: Lock& lock() WTF_RETURNS_LOCK(m_lock) { return m_lock; }
Simon Fraser (smfr)
Comment 6 2021-12-02 15:52:05 PST
EWS
Comment 7 2021-12-02 22:05:57 PST
Committed r286481 (244820@main): <https://commits.webkit.org/244820@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445783 [details].
Note You need to log in before you can comment on or make changes to this bug.